<resources>
    <string name="app_name">Tetris</string>
    <string name="single_player">PLAY</string>
    <string name="versus">VERSUS</string>
    <string name="machine">VS MACHINE</string>
    <string name="quit">QUIT</string>
    <string name="Settings">SETTINGS</string>
    <string name="tetris_logo">Tetris Logo</string>
    <string name="game">GAME</string>
    <string name="over">OVER</string>
    <string name="restart">RESTART</string>
    <string name="menu">MAIN MENU</string>
    <string name="test">test</string>
</resources>
