<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.nuno_mglhotmail.tetris.Menu"
    android:background="#2639b1"
    android:weightSum="1"
    android:gravity="top|center">


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.21" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo"
        android:contentDescription="@string/tetris_logo" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.30" />

    <Button
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:text="@string/single_player"
        android:id="@+id/single"
        android:layout_weight="0.1"
        android:textSize="20dp"
        android:textStyle="bold"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:text="@string/versus"
        android:id="@+id/versus"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_weight="0.10"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorPrimaryDark" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.09" />

    <Button
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:text="@string/Settings"
        android:id="@+id/settings"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_weight="0.10"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorPrimaryDark"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:id="@+id/quit"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_weight="0.1"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorPrimaryDark" />

</LinearLayout>
