<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nuno_mglhotmail.tetris.GameOver"
    android:background="@color/colorPrimaryDark"
    android:gravity="top|center"
    android:orientation="vertical"
    android:weightSum="1">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/game"
        android:text="@string/game"
        android:background="#00ffffff"
        android:gravity="center"
        android:inputType="text"
        android:textIsSelectable="false"
        android:textSize="90sp"
        android:textColor="@color/colorAccent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/over"
        android:text="@string/over"
        android:background="#00ffffff"
        android:gravity="center"
        android:inputType="text"
        android:textIsSelectable="false"
        android:textSize="90dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorAccent" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.12" />

    <Button
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:id="@+id/restart"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAccent"
        android:layout_weight="0.22"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04" />

    <Button
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:id="@+id/menu"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAccent"
        android:layout_weight="0.25"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark" />

</LinearLayout>
